<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_light_inversePrimary"
            android:minHeight="?attr/actionBarSize"
            app:menu="@menu/optionsmenu"
            app:subtitle="@string/home"
            app:subtitleCentered="true"
            app:title="@string/app_name"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/imgMentapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/logo"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mentapp_logo"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/btnForm"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Tertiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="btnTestOnClick"
        android:text="@string/complete_form"
        app:icon="?attr/actionModePasteDrawable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMentapp" />

    <Button
        android:id="@+id/btnPreviousResult"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Tertiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="btnPreviousOnClick"
        android:text="@string/consult_previous_results"
        app:icon="?android:attr/actionModeFindDrawable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnForm" />

</androidx.constraintlayout.widget.ConstraintLayout>