<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_primary"
    tools:context=".UserGuideActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBarUserGuide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rounded_alt"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/outline_arrow_back_24_alt"
            app:title="@string/title_top_appbar_user_guide"
            app:titleCentered="true"
            app:titleTextAppearance="@style/toolbarText"
            app:titleTextColor="@color/md_theme_light_onPrimary_alt" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lexend"
                android:text="@string/usuarios"
                android:textColor="@android:color/white"
                android:textSize="34sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/lexend"
                android:text="@string/conectarse_o_cambiar_de_usuario"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lexend"
                android:text="@string/el_boton_esta_ubicado_en_la_esquina_superior_derecha_una_vez_seleccionada_esta_opcion_se_debera_introducir_los_datos_en_el_formulario_de_la_ventana_emergente_nombre_de_usuario_y_contrase_a_y_hacer_clic_en_conectarse"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck,VisualLintLongText" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/lexend"
                android:text="@string/Registrar_un_nuevo_usuario"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lexend"
                android:text="@string/En_la_ventana_de_cambiar_usuario_al_final_del_formulario_estara_ubicado_el_boton_Registrarse_una_vez_hecho_clic_el_formulario_se_adaptara_para_poder_introducir_los_necesarios_nombre_de_usuario_contraseña_confirmar_contraseña_gmail_Se_debera_hacer_clic_en_confirmar_y_volvera_a_aparecer_el_formulario_de_conexión_de_usuario"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck,VisualLintLongText" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/lexend"
                android:text="@string/Como_se_con_que_usuario_estoy_conectado"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lexend"
                android:text="@string/El_nombre_de_usuario_actual_se_mostrara_en_la_esquina_inferior_izquierda"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck,VisualLintLongText" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/lexend"
                android:text="@string/Realizar_continuar_test"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lexend"
                android:text="@string/Al_hacer_clic_en_este_boton_se_empezara_un_test_nuevo_para_el_usuario_si_el_usuario_ya_empezo_un_test_y_decidio_posponerlo_se_retomara_ese_mismo_test_El_test_consiste_en_una_serie_de_preguntas_que_apareceran_de_cinco_en_cinco_y_una_vez_el_usuario_haya_terminado_esas_preguntas_prodra_pulsar_en_siguiente_ubicado_en_la_esquina_inferio_derecha_para_pasar_a_las_siguientes_se_podra_volver_a_las_anteriores_con_el_boton_Anterior_Se_presentaran_cinco_respuestas_del_cero_al_cuatro_siendo_Cero_nunca_Uno_En_pocas_ocasiones_Dos_Con_cierta_frecuencia_Tres_A_menudo_Cuatro_Siempre_El_resultado_se_mostrara_una_vez_terminado_el_test"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck,VisualLintLongText" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/lexend"
                android:text="@string/Ver_resultado_anteriores"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lexend"
                android:text="@string/Se_muestra_los_resultados_de_los_test_anteriores_que_ha_realizado_el_usuario_actual"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck,VisualLintLongText" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>